# exhaustionlab

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ADVANCED_VALIDATION_FEATURES.md  AGENTS.md  BDD_IMPLEMENTATION_COMPLETE.md  BDD_QUICK_REFERENCE.md  BUSINESS_PLAN.md  CHART_IMPLEMENTATION_SUMMARY.md  CI_CD_SETUP.md  CI_CD_SUMMARY.md  CODING_AGENT_PROMPT.md  COMPLETE_FEATURES_SUMMARY.md  COMPLETE_SESSION_SUMMARY.md  COMPLETE_VALIDATION_IMPLEMENTATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_VALIDATION_GUIDE.md  DEPLOYMENT_VALIDATION_SUMMARY.md  Dockerfile  EVOLUTION_IMPLEMENTATION_SUMMARY.md  EVOLUTION_UI_GUIDE.md  EXECUTIVE_SUMMARY.md  FINAL_SESSION_SUMMARY.md  HANDOFF_SUMMARY.md  IMPLEMENTATION_STATUS.md  INSTALL_V3.md  LIVE_TRADING_GUIDE.md  LLM_INTEGRATION_GUIDE.md  Makefile  Makefile.ci  NEXT_STEPS_LLM.md  PRD.md  PRD_COMPLETE.md  QUICK_FIXES_NEEDED.md  QUICK_START.md  QUICK_START_CI_CD.md  README.md  README_COMPREHENSIVE_DESIGN.md  (+34 more)
.github/workflows/: bdd-tests.yml  coverage-report.yml
docker/: entrypoint.sh  prometheus.yml
examples/: README.md  debug_llm_communication.py  debug_llm_simple.py  extract_code_no_api.py  extract_full_strategies.py  extract_strategies.py  migrate_knowledge_base.py  test_basic_integration.py  test_complete_integration.py  test_crawler_standalone.py  test_deployment_validation.py  test_improved_prompt.py  test_llm_integration.py  test_llm_with_examples.py  test_meta_evolution.py  test_multiple_generations.py  test_ui_startup.py
exhaustionlab/: __init__.py
exhaustionlab/app/: main.py  main_window.py
exhaustionlab/app/backtest/: engine.py  ga_optimizer.py  indicators.py  llm_evolution.py  multi_market_evaluator.py  strategy_genome.py  strategy_registry.py  traditional_ga.py  traditional_genetics.py  unified_evolution.py
exhaustionlab/app/backtest/strategies/: exhaustion_signal_pyne_hint.md
exhaustionlab/app/chart/: candle_item.py  chart_widget.py
exhaustionlab/app/config/: FITNESS_CONFIG_GUIDE.md  __init__.py  fitness_config.py  fitness_presets.json  indicator_params.py  settings.py  squeeze_params.json  strategy_config.py
exhaustionlab/app/data/: binance_rest.py  binance_ws.py  datasource.py
exhaustionlab/app/llm/: __init__.py  enhanced_prompts.py  example_loader.py  hallucination_detector.py  llm_client.py  prompts.py  strategy_generator.py  validators.py
exhaustionlab/app/meta_evolution/: StrategyWebCrawler.py  __init__.py  adaptive_parameters.py  enhanced_orchestrator.py  intelligent_orchestrator.py  knowledge_base_storage.py  live_trading_validator.py  meta_config.py  performance_metrics.py  quality_scorer.py  strategic_directives.py  strategy_database.py
exhaustionlab/app/meta_evolution/crawlers/: __init__.py  code_extractor.py  github_crawler.py  mock_repo_data.py  reddit_crawler.py  tradingview_scraper.py
exhaustionlab/app/validation/: __init__.py  backtest_parser.py  comprehensive_scorer.py  deployment_readiness.py  execution_quality.py  monte_carlo_simulator.py  multi_market_tester.py  profit_analyzer.py  report_generator.py  slippage_model.py  walk_forward_validator.py
exhaustionlab/utils/: config.py  timeframes.py
exhaustionlab/webui/: __init__.py  api.py  chart_generator.py  demo_data.py  evolution_service.py  live_trading_service.py  middleware.py  observability.py  server.py  services.py  settings_service.py
exhaustionlab/webui/models/: __init__.py  requests.py  responses.py
exhaustionlab/webui/static/: app.js  backtest.js  evolution.js  live_trading.js  multi_market.js  settings.js  styles.css  validation.js
exhaustionlab/webui/templates/: index.html
llm_debug_logs/: ANALYSIS_REPORT.md  SUCCESS_REPORT.md
llm_debug_logs/improved_20251116_110038/: google_gemma-3n-e4b_code.py  google_gemma-3n-e4b_response.txt
llm_debug_logs/improved_20251116_110840/: google_gemma-3n-e4b_code.py  google_gemma-3n-e4b_response.txt
llm_debug_logs/session_20251116_105821/: 00_SUMMARY.json  01_system_prompt.txt  02_user_prompt.txt  04_response_raw.json  05_response_content.txt  06_code_block_1.py
llm_debug_logs/session_20251116_110822/: 00_SUMMARY.json  03_request.json  04_response_raw.json  05_response_content.txt  06_code_block_1.py
scripts/: ga_last24.sh
scripts/pine/: exhaustion_signal_v6.pine
scripts/pyne/: exhaustion_signal.py
tests/: test_api_validation_endpoints.py  test_exhaustion_signals.py  test_ga_optimizer.py  test_live_trading_api.py  test_smoke.py  test_squeeze_indicator.py  test_webui_basic_api.py
tests/bdd/: test_strategy_extraction.py
tests/bdd/features/: strategy_extraction.feature
tests/meta_evolution/: test_github_crawler.py
